--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ django-cors-headers>=4.0.0
 requests>=2.31.0
 drf-spectacular>=0.29.0
 
+gunicorn>=21.2.0
+whitenoise>=6.6.0
+psycopg2-binary>=2.9.9
+dj-database-url>=2.1.0
+python-decouple>=3.8
